--- a/cplusplus/libdiametermip4/Makefile
+++ b/cplusplus/libdiametermip4/Makefile
@@ -134,35 +134,36 @@ CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 srcdir = .
 
-ACLOCAL = ${SHELL} /home/victorf/work/sourceforge/diameter/cplusplus/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/victorf/work/od/svn/diameter/cplusplus/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/victorf/work/sourceforge/diameter/cplusplus/missing --run tar
+AMTAR = ${SHELL} /home/victorf/work/od/svn/diameter/cplusplus/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/victorf/work/sourceforge/diameter/cplusplus/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/victorf/work/sourceforge/diameter/cplusplus/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/victorf/work/sourceforge/diameter/cplusplus/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/victorf/work/od/svn/diameter/cplusplus/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/victorf/work/od/svn/diameter/cplusplus/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/victorf/work/od/svn/diameter/cplusplus/missing --run automake-1.9
 AWK = gawk
-CC = gcc-4.0
+CC = gcc-4.1
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPP = gcc-4.0 -E
+CPP = gcc-4.1 -E
 CPPFLAGS = 
-CXX = g++-4.0
-CXXCPP = g++-4.0 -E
+CXX = g++-4.1
+CXXCPP = g++-4.1 -E
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -g -O2
 CYGPATH_W = echo
-DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-h\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-h\" -DPACKAGE_BUGREPORT=\"yohba@tari.toshiba.com\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-h\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1 
+DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-h\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-h\" -DPACKAGE_BUGREPORT=\"yohba@tari.toshiba.com\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-h\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1
 DEPDIR = .deps
 ECHO = echo
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = grep -E
+EGREP = /bin/grep -E
 EXEEXT = 
 F77 = 
 FFLAGS = 
+GREP = /bin/grep
 HOST_OS = OS_LINUX
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -175,12 +176,12 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
 LN_S = ln -s
 LTLIBOBJS = 
-L_CPPFLAGS = -Wall -Wno-sign-compare -I/usr/include -I/usr/include
-L_LDFLAGS = -L/usr/include/ace -L/usr/include/lib
-L_LIBS = -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser -lboost_thread
+L_CPPFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include
+L_LDFLAGS = -L/usr/include/ace
+L_LIBS = -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser
 L_MPAFLAGS = 
 L_ODBCFLAGS = 
-MAKEINFO = ${SHELL} /home/victorf/work/sourceforge/diameter/cplusplus/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/victorf/work/od/svn/diameter/cplusplus/missing --run makeinfo
 OBJEXT = o
 OPT_EAP_ARCHIE_FALSE = 
 OPT_EAP_ARCHIE_TRUE = #
@@ -196,12 +197,9 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 VERSION = 1.0.7-h
-ac_ct_AR = ar
-ac_ct_CC = gcc-4.0
+ac_ct_CC = gcc-4.1
 ac_ct_CXX = 
 ac_ct_F77 = 
-ac_ct_RANLIB = ranlib
-ac_ct_STRIP = strip
 am__fastdepCC_FALSE = #
 am__fastdepCC_TRUE = 
 am__fastdepCXX_FALSE = #
@@ -219,29 +217,36 @@ build_os = linux-gnu
 build_vendor = pc
 compile_EAPTLS_FALSE = 
 compile_EAPTLS_TRUE = #
-datadir = ${prefix}/share
+datadir = ${datarootdir}
+datarootdir = ${prefix}/share
+docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
+dvidir = ${docdir}
 exec_prefix = ${prefix}
 host = i686-pc-linux-gnu
 host_alias = 
 host_cpu = i686
 host_os = linux-gnu
 host_vendor = pc
+htmldir = ${docdir}
 includedir = $(prefix)/include/opendiameter/diametermip4
-infodir = ${prefix}/info
-install_sh = /home/victorf/work/sourceforge/diameter/cplusplus/install-sh
+infodir = ${datarootdir}/info
+install_sh = /home/victorf/work/od/svn/diameter/cplusplus/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
+localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
-mandir = ${prefix}/man
+mandir = ${datarootdir}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
+pdfdir = ${docdir}
 prefix = /usr/local
 program_transform_name = s,x,x,
+psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = $(prefix)/etc/opendiameter/diametermip4
 target_alias = 
-AM_CPPFLAGS = -Wall -Wno-sign-compare -I/usr/include -I/usr/include  \
+AM_CPPFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include  \
               -I../include \
               -I../libodutl/include \
               -I../libdiamparser \
@@ -250,7 +255,7 @@ AM_CPPFLAGS = -Wall -Wno-sign-compare -I/usr/include -I/usr/include  \
               -I./include \
               -DOS_LINUX
 
-AM_LDFLAGS = -L/usr/include/ace -L/usr/include/lib
+AM_LDFLAGS = -L/usr/include/ace
 DIAMETER_MIP_SRC = src/diameter_mip4_amr_parser.cxx \
                    src/diameter_mip4_ama_parser.cxx \
                    src/diameter_mip4_har_parser.cxx \
@@ -298,7 +303,7 @@ sysconf_DATA = config/aaas_s.local.xml \
                config/hosts \
                config/server.local.xml
 
-LDADD = -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser -lboost_thread \
+LDADD = -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser \
         libdiametermip4.la \
 	$(top_srcdir)/libdiameter/libdiameter.la \
 	$(top_srcdir)/libdiamparser/libdiamparser.la \
