Parser migration changes #2
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@35 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/libdiameter/Makefile.in
+++ b/cplusplus/libdiameter/Makefile.in
@@ -237,6 +237,7 @@ LIBTOOL_DEPS = @LIBTOOL_DEPS@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 L_CPPFLAGS = @L_CPPFLAGS@
+L_CXXFLAGS = @L_CXXFLAGS@
 L_LDFLAGS = @L_LDFLAGS@
 L_LIBS = @L_LIBS@
 L_MPAFLAGS = @L_MPAFLAGS@
