--- a/cplusplus/configure.in
+++ b/cplusplus/configure.in
@@ -84,12 +84,14 @@ AC_SUBST(LIBTOOL_DEPS)
 case $host in
   *-*-freebsd*)
      AC_SUBST(L_CPPFLAGS, ["-Wall -Wno-strict-aliasing -I$ACE_ROOT -I$BOOST_ROOT -pthread"])
+     AC_SUBST(L_CXXFLAGS, ["-Wall -Wno-strict-aliasing -I$ACE_ROOT -I$BOOST_ROOT -pthread"])
      AC_SUBST(L_LDFLAGS, ["-L$ACE_ROOT/ace -pthread"])
      AC_SUBST(L_LIBS, ["-lc_r -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser"])
      AC_SUBST(HOST_OS, [OS_FREEBSD])
   ;;
   *-*-linux*)
-     AC_SUBST(L_CPPFLAGS, ["-Wall -Wno-strict-aliasing -I$ACE_ROOT -I$BOOST_ROOT"])
+     AC_SUBST(L_CPPFLAGS, ["-Wall -Wno-strict-aliasing -I$ACE_ROOT -I$BOOST_ROOT -g"])
+     AC_SUBST(L_CXXFLAGS, ["-Wall -Wno-strict-aliasing -I$ACE_ROOT -I$BOOST_ROOT -g"])
      AC_SUBST(L_LDFLAGS, ["-L$ACE_ROOT/ace"])
      AC_SUBST(L_LIBS, ["-lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser"])
      AC_SUBST(HOST_OS, [OS_LINUX])
