--- a/cplusplus/libdiametermip4/Makefile
+++ b/cplusplus/libdiametermip4/Makefile
@@ -151,7 +151,7 @@ CPPFLAGS =
 CXX = g++-4.1
 CXXCPP = g++-4.1 -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O
+CXXFLAGS = -g
 CYGPATH_W = echo
 DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-h\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-h\" -DPACKAGE_BUGREPORT=\"yohba@tari.toshiba.com\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-h\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1
 DEPDIR = .deps
@@ -176,7 +176,8 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
 LN_S = ln -s
 LTLIBOBJS = 
-L_CPPFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include
+L_CPPFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include -g
+L_CXXFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include -g
 L_LDFLAGS = -L/usr/include/ace
 L_LIBS = -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser
 L_MPAFLAGS = 
@@ -246,7 +247,7 @@ sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = $(prefix)/etc/opendiameter/diametermip4
 target_alias = 
-AM_CPPFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include  \
+AM_CPPFLAGS = -Wall -Wno-strict-aliasing -I/usr/include -I/usr/include -g  \
               -I../include \
               -I../libodutl/include \
               -I../libdiamparser/include \
