--- a/cplusplus/applications/aaa/Makefile.in
+++ b/cplusplus/applications/aaa/Makefile.in
@@ -53,12 +53,12 @@ am__objects_1 = src/aaad_main.$(OBJEXT) \
 am__objects_2 =
 am_aaad_OBJECTS = $(am__objects_1) $(am__objects_2)
 aaad_OBJECTS = $(am_aaad_OBJECTS)
-aaad_DEPENDENCIES = $(top_srcdir)/libeap/libeap.la \
-	$(top_srcdir)/libeap/libeaparchie.la \
-	$(top_srcdir)/libdiametereap/libdiametereap.la \
-	$(top_srcdir)/libdiameter/libdiameter.la \
-	$(top_srcdir)/libdiamparser/libdiamparser.la \
-	$(top_srcdir)/libodutl/libodutl.la
+aaad_DEPENDENCIES = $(top_builddir)/libeap/libeap.la \
+	$(top_builddir)/libeap/libeaparchie.la \
+	$(top_builddir)/libdiametereap/libdiametereap.la \
+	$(top_builddir)/libdiameter/libdiameter.la \
+	$(top_builddir)/libdiamparser/libdiamparser.la \
+	$(top_builddir)/libodutl/libodutl.la
 DEFAULT_INCLUDES = -I. -I$(srcdir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -239,13 +239,10 @@ nobase_sysconf_DATA = config/aaad.xml \
                       config/aaad_user_db.xsd
 
 aaad_SOURCES = $(SRC) $(HDR) 
-aaad_LDADD = @L_LIBS@ \
-             $(top_srcdir)/libeap/libeap.la \
-             $(top_srcdir)/libeap/libeaparchie.la \
-             $(top_srcdir)/libdiametereap/libdiametereap.la \
-             $(top_srcdir)/libdiameter/libdiameter.la \
-             $(top_srcdir)/libdiamparser/libdiamparser.la \
-             $(top_srcdir)/libodutl/libodutl.la
+aaad_LDADD = $(top_builddir)/libeap/libeap.la \
+	$(top_builddir)/libeap/libeaparchie.la $(top_builddir)/libdiametereap/libdiametereap.la \
+	$(top_builddir)/libdiameter/libdiameter.la $(top_builddir)/libdiamparser/libdiamparser.la \
+	$(top_builddir)/libodutl/libodutl.la -lACEXML_Parser -lACEXML -lACE -lACE_SSL -lssl
 
 EXTRA_DIST = config
 all: all-am
