Added autoheader support
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@57 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/configure.in
+++ b/cplusplus/configure.in
@@ -3,6 +3,9 @@
 AC_INIT(OpenDiameter, 1.0.7-h, yohba@tari.toshiba.com)
 AM_INIT_AUTOMAKE([subdir-objects])
 
+# Configuration headers
+AC_CONFIG_HEADERS([include/config.h])
+
 # Program Defaults
 AC_DISABLE_SHARED
 
